# eco-footprint-app

./: README.md
eco-footprint/: package-lock.json  package.json  shopify.app.toml
eco-footprint-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
eco-footprint-api/app/: config.py  crud.py  db.py  main.py  models.py  schemas.py
eco-footprint-api/app/static/: widget.js
eco-footprint-api/app/static/admin/: index.html
eco-footprint-api/tests/: test_estimate.py
eco-footprint/extensions/offset-optin-checkout/: package.json  shopify.extension.toml
eco-footprint/extensions/offset-optin-checkout/src/: Checkout.tsx
eco-footprint/extensions/offset-settings-admin/: package.json  shopify.extension.toml
eco-footprint/extensions/offset-settings-admin/locales/: en.default.json  fr.json
